fix todos alignment

--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -46,9 +46,11 @@
 
 .todos {
   display: flex;
+  flex-direction: column;
   justify-content: space-evenly;
   width: 90%;
   flex-wrap: wrap;
+  align-content: center;
 }
 
 .todos-single {
@@ -88,7 +90,7 @@
     width: 95%;
   }
   .todos {
-    width: 95%;
+    width: 65%;
   }
   .todos-single {
     width: 100%;
